--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div> 
                 </div>
 
-                <div class="grid-container">
+                <div class="grid-container" id="grid-container">
                     <div class="grid-row">
                         <div class="grid-cell"></div>
                         <div class="grid-cell"></div>
