--- a/index.html
+++ b/index.html
@@ -84,7 +84,18 @@
                 Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
             </p>
         </div>
-
+        <img src="img/2.jpg" style="display:none;">
+        <img src="img/4.jpg" style="display:none;">
+        <img src="img/8.jpg" style="display:none;">
+        <img src="img/16.jpg" style="display:none;">
+        <img src="img/32.jpg" style="display:none;">
+        <img src="img/64.jpg" style="display:none;">
+        <img src="img/128.jpg" style="display:none;">
+        <img src="img/256.jpg" style="display:none;">
+        <img src="img/512.jpg" style="display:none;">
+        <img src="img/1024.jpg" style="display:none;">
+        <img src="img/2048.jpg" style="display:none;">
+        
         <script src="js/bind_polyfill.js"></script>
         <script src="js/classlist_polyfill.js"></script>
         <script src="js/animframe_polyfill.js"></script>
