--- a/index.html
+++ b/index.html
@@ -106,5 +106,15 @@
         <script src="js/local_storage_manager.js"></script>
         <script src="js/game_manager.js"></script>
         <script src="js/application.js"></script>
+
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-GBRPR934YQ"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'G-GBRPR934YQ');
+        </script>
     </body>
 </html>
